--- a/app/src/main/res/layout/activity_new_item.xml
+++ b/app/src/main/res/layout/activity_new_item.xml
@@ -8,6 +8,25 @@
     android:orientation="vertical">
 
     <EditText
+        android:id ="@+id/amount"
         android:layout_width="match_parent"
-        android:layout_height="50dp"/>
+        android:layout_height="50dp"
+        android:hint="@string/amount"
+        android:inputType="numberDecimal"/>
+
+    <EditText
+        android:id ="@+id/type"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="@string/type"/>
+
+    <Button
+        android:id="@+id/button_save"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:text="@string/button_save"
+        android:layout_margin="@dimen/big_padding"
+        android:textColor="@color/buttonLabel" />
+
 </LinearLayout>
