--- a/app/src/main/res/layout/activity_new_item.xml
+++ b/app/src/main/res/layout/activity_new_item.xml
@@ -14,11 +14,22 @@
         android:hint="@string/amount"
         android:inputType="numberDecimal"/>
 
-    <EditText
-        android:id ="@+id/type"
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="@string/type"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/type"/>
+        <EditText
+            android:id ="@+id/type"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="@string/please_input"/>
+    </LinearLayout>
 
     <Button
         android:id="@+id/button_save"
