--- a/app/src/main/res/layout/item_fragment.xml
+++ b/app/src/main/res/layout/item_fragment.xml
@@ -8,8 +8,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/item_recyclerview"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         tools:listitem="@layout/type_item"/>
 
 </LinearLayout>
