--- a/app/src/main/res/layout/activity_new_item.xml
+++ b/app/src/main/res/layout/activity_new_item.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="@string/amount"
-        android:inputType="numberDecimal"/>
+        android:inputType="numberSigned|numberDecimal"/>
 
 
 
