--- a/app/src/main/res/layout/activity_new_item.xml
+++ b/app/src/main/res/layout/activity_new_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewItemActivity"
+    tools:context=".activity.NewItemActivity"
     android:orientation="vertical">
 
     <EditText
@@ -49,5 +49,15 @@
         android:text="@string/new_type"
         android:layout_margin="@dimen/big_padding"
         android:textColor="@color/buttonLabel" />
+
+    <Button
+        android:id="@+id/type_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:text="@string/edit_type"
+        android:layout_margin="@dimen/big_padding"
+        android:textColor="@color/buttonLabel"
+        android:onClick="editType"/>
 
 </LinearLayout>
