--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,9 +45,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
+            <TextView
+                android:id="@+id/change_trend"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:text="变化趋势"/>
+
+
         </LinearLayout>
 
         <com.github.mikephil.charting.charts.LineChart
+            android:layout_marginTop="20dp"
             android:id="@+id/chart1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
