--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,13 @@
                 android:layout_marginStart="20dp"
                 android:text="变化趋势"/>
 
+            <TextView
+                android:id="@+id/property_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:text="资产分布"/>
+
 
         </LinearLayout>
 
