完成周k，月k的绘制

--- a/app/src/main/res/layout/activity_kline.xml
+++ b/app/src/main/res/layout/activity_kline.xml
@@ -21,20 +21,20 @@
             android:id="@+id/day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="日" />
+            android:text="日K" />
 
         <TextView
             android:id="@+id/week"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="周"
+            android:text="周K"
             android:layout_marginStart="20dp"/>
 
         <TextView
             android:id="@+id/month"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="月"
+            android:text="月K"
             android:layout_marginStart="20dp"/>
 
 
