--- a/app/src/main/res/layout/user_protocol.xml
+++ b/app/src/main/res/layout/user_protocol.xml
@@ -21,9 +21,9 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/user_hint"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/user_protocol_content"
                 />
         </LinearLayout>
     </ScrollView>
