--- a/app/src/main/res/layout/activity_protocol.xml
+++ b/app/src/main/res/layout/activity_protocol.xml
@@ -8,7 +8,9 @@
     android:orientation="vertical">
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
