--- a/app/src/main/res/layout/record_item.xml
+++ b/app/src/main/res/layout/record_item.xml
@@ -26,11 +26,11 @@
             android:layout_marginStart="20dp"/>
 
         <Button
-            android:id="@+id/delete"
+            android:id="@+id/edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:text="@string/delete"/>
+            android:text="@string/edit"/>
 
     </RelativeLayout>
 
