--- a/app/src/main/res/layout/activity_edit_type.xml
+++ b/app/src/main/res/layout/activity_edit_type.xml
@@ -7,8 +7,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/type_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
     <Button
         android:layout_width="wrap_content"
