--- a/app/src/main/res/layout/activity_new_item.xml
+++ b/app/src/main/res/layout/activity_new_item.xml
@@ -64,7 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:text="@string/edit_type"
+        android:text="@string/manage_type"
         android:layout_margin="@dimen/big_padding"
         android:textColor="@color/buttonLabel"
         android:onClick="editType"/>
