--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="colorPrimary">@color/purple_500</color>
     <color name="colorAccent">@color/purple_700</color>
     <color name="buttonLabel">@color/white</color>
+
+    <color name="gray">#d9d9d9</color>
 </resources>
