--- a/app/src/main/res/layout/item_edit_type.xml
+++ b/app/src/main/res/layout/item_edit_type.xml
@@ -6,7 +6,7 @@
     android:layout_marginStart="20dp"
     android:gravity="center_vertical">
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:id="@+id/type_name"
         android:layout_centerVertical="true"/>
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/type_name"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="5dp"
         android:id="@+id/edit_btn"
         android:text="@string/edit"
         android:layout_centerVertical="true"/>
