--- a/app/src/main/res/layout/activity_kline.xml
+++ b/app/src/main/res/layout/activity_kline.xml
@@ -11,7 +11,6 @@
         android:id="@+id/layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,25 +18,32 @@
 
         <TextView
             android:id="@+id/day"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:textColor="@color/text_select_color"
-            android:text="@string/day_k" />
+            android:gravity="center"
+            android:text="@string/day_k"
+            android:textSize="@dimen/big_text_size"
+            />
 
         <TextView
             android:id="@+id/week"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:text="@string/week_k"
+            android:gravity="center"
             android:textColor="@color/text_select_color"
+            android:textSize="@dimen/big_text_size"
             android:layout_marginStart="20dp"/>
 
         <TextView
             android:id="@+id/month"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/monty_k"
             android:textColor="@color/text_select_color"
+            android:textSize="@dimen/big_text_size"
             android:layout_marginStart="20dp"/>
 
 
