--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="edit_height">50dp</dimen>
     <dimen name="big_padding">16dp</dimen>
+    <dimen name="big_text_size">16sp</dimen>
 </resources>
