add channel config

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="buttonLabel">@color/white</color>
 
     <color name="gray">#d9d9d9</color>
+    <color name="green">#49DC17</color>
 </resources>
