--- a/app/src/main/res/layout/record_edit_item.xml
+++ b/app/src/main/res/layout/record_edit_item.xml
@@ -25,4 +25,28 @@
         app:layout_constraintBottom_toBottomOf="@+id/amount"
         app:layout_constraintLeft_toRightOf="@id/amount"
         app:layout_constraintTop_toTopOf="@+id/amount" />
+    <LinearLayout
+        android:id="@+id/change_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/amount"
+        app:layout_constraintTop_toBottomOf="@id/amount"
+        android:layout_marginStart="20dp"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/change_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="变动了"/>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="变动描述"/>
+    </LinearLayout>
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
