--- a/app/src/main/res/layout/activity_new_item.xml
+++ b/app/src/main/res/layout/activity_new_item.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="20dp">
         <TextView
@@ -20,11 +21,19 @@
             android:text="@string/amount"/>
         <EditText
             android:id ="@+id/amount"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_marginStart="10dp"
             android:layout_height="50dp"
             android:hint="@string/please_input"
-            android:inputType="numberSigned|numberDecimal"/>
+            android:inputType="numberSigned|numberDecimal" />
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/jiajian"
+            android:onClick="onSignClick"/>
+        />
     </LinearLayout>
 
 
@@ -39,11 +48,13 @@
             android:text="@string/type"/>
         <EditText
             android:id ="@+id/type"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_marginStart="10dp"
             android:layout_height="50dp"
             android:hint="@string/please_select"
             android:focusable="false"/>
+
     </LinearLayout>
 
     <Button
