--- a/app/src/main/res/layout/record_edit_item.xml
+++ b/app/src/main/res/layout/record_edit_item.xml
@@ -5,49 +5,66 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:ems="5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:inputType="numberSigned|numberDecimal"/>
 
-    <TextView
-        android:id="@+id/type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="微信"
+    <LinearLayout
+        android:id="@+id/amount_layout"
+        android:layout_width="match_parent"
         android:layout_marginStart="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/amount"
-        app:layout_constraintLeft_toRightOf="@id/amount"
-        app:layout_constraintTop_toTopOf="@+id/amount" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:gravity="center"
+            android:text="微信" />
+
+        <EditText
+            android:id="@+id/amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:ems="5"
+            android:inputType="numberSigned|numberDecimal" />
+
+        <ImageView
+            android:id="@+id/sign"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/jiajian" />
+
+    </LinearLayout>
+
     <LinearLayout
         android:id="@+id/change_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/amount"
-        app:layout_constraintTop_toBottomOf="@id/amount"
         android:layout_marginStart="20dp"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@id/amount_layout"
+        app:layout_constraintTop_toBottomOf="@id/amount_layout">
 
         <TextView
             android:id="@+id/change_amount"
+            android:layout_marginStart="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="变动了"/>
+            android:text="变动了" />
+
         <EditText
             android:id="@+id/remark"
             android:layout_width="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_height="wrap_content"
-            android:hint="变动描述"/>
+            android:hint="备注" />
     </LinearLayout>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
