--- a/app/src/main/res/layout/item_fragment.xml
+++ b/app/src/main/res/layout/item_fragment.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center_horizontal"
     tools:context=".ItemFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -12,4 +13,10 @@
         android:layout_height="wrap_content"
         tools:listitem="@layout/type_item"/>
 
+    <Button
+        android:id="@+id/new_type"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/new_type"/>
 </LinearLayout>
