--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="edit_height">50dp</dimen>
     <dimen name="big_padding">16dp</dimen>
     <dimen name="big_text_size">16sp</dimen>
+    <dimen name="dp_70">70dp</dimen>
 </resources>
