--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,9 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:background">@color/gray</item>
     </style>
+
+    <style name="StandardButtonStyle">
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
 </resources>
