--- a/app/src/main/res/layout/record_item.xml
+++ b/app/src/main/res/layout/record_item.xml
@@ -28,7 +28,7 @@
         <Button
             android:id="@+id/edit"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:text="@string/edit"/>
 
