--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="7dp"
         android:layout_alignParentEnd="true"
+        android:contentDescription="@string/add_item"
         android:clickable="true"
         app:srcCompat="@drawable/ic_baseline_add_24" />
 
